repositories, templates redesign and first controller

--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -17,17 +17,17 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
 
-    <script src="../js/backToTop.js" type="module"></script>
-    <script src="../js/searchbar.js" type="module"></script>
-    <script src="../js/sidebar.js" type="module"></script>
+    <script src="../static/js/backToTop.js" type="module"></script>
+    <script src="../static/js/searchbar.js" type="module"></script>
+    <script src="../static/js/sidebar.js" type="module"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/catalog.css"/>
+    <link rel="stylesheet" href="../static/css/catalog.css"/>
 
-    <link rel="icon" href="../images/ace-of-spades.png">
+    <link rel="icon" href="../static/images/ace-of-spades.png">
     <title>Victory</title>
 <body>
 <header>
@@ -35,7 +35,7 @@
 
     <nav id="nav" class="navbar navbar-expand">
 
-        <a href="/"><img src="../images/emblem.png"></a>
+        <a href="/"><img src="../static/images/emblem.png"></a>
 
         <ul id="menu">
             <li><a href="/catalog">Catalog</a></li>
