--- a/src/main/resources/templates/distributorDetails.html
+++ b/src/main/resources/templates/distributorDetails.html
@@ -12,17 +12,17 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 
-    <script src="../js/sidebar.js" type="module"></script>
+    <script src="../static/js/sidebar.js" type="module"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/distributorDetails.css"/>
-    <link rel="stylesheet" href="../css/bootstrap/bootstrapNav.css"/>
+    <link rel="stylesheet" href="../static/css/distributorDetails.css"/>
+    <link rel="stylesheet" href="../static/css/bootstrap/bootstrapNav.css"/>
 
 
-    <link rel="icon" href="../images/ace-of-spades.png">
+    <link rel="icon" href="../static/images/ace-of-spades.png">
     <title>Victory</title>
 </head>
 <body>
@@ -31,7 +31,7 @@
 <header>
     <nav id="nav" class="navbar navbar-expand">
 
-        <a href="/"><img src="../images/emblem.png"></a>
+        <a href="/"><img src="../static/images/emblem.png"></a>
 
         <ul id="menu">
             <li><a href="/catalog">Catalog</a></li>
