--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,15 +20,13 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <script src="../js/sidebar.js" type="module"></script>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/home.css"/>
+    <link rel="stylesheet" type="text/css" href="../../css/home.css"/>
 
-    <link rel="icon" href="../images/ace-of-spades.png">
+    <link rel="icon" href="../../images/ace-of-spades.png">
     <title>Victory</title>
 
 </head>
@@ -37,7 +35,7 @@
 <header>
     <nav id="nav" class="navbar navbar-expand">
 
-        <a href="/"><img src="../images/emblem.png"></a>
+        <a href="/"><img src="../../images/emblem.png" alt="Victory"></a>
 
         <ul id="menu">
             <li><a href="/catalog">Catalog</a></li>
@@ -106,5 +104,7 @@
 <footer>&copy Victory 2022. All rights reserved.</footer>
 
 </body>
+
+<script src="../../js/sidebar.js"></script>
 
 </html>
