--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -14,12 +14,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/account.css"/>
-    <link rel="stylesheet" href="../css/bootstrap/bootstrapNav.css"/>
+    <link rel="stylesheet" href="../static/css/account.css"/>
+    <link rel="stylesheet" href="../static/css/bootstrap/bootstrapNav.css"/>
 
-    <script src="../js/sidebar.js" type="module"></script>
+    <script src="../static/js/sidebar.js" type="module"></script>
 
-    <link rel="icon" href="../images/ace-of-spades.png">
+    <link rel="icon" href="../static/images/ace-of-spades.png">
     <title>Victory</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
 
     <nav id="nav" class="navbar navbar-expand">
 
-        <a href="/"><img src="../images/emblem.png"></a>
+        <a href="/"><img src="../static/images/emblem.png"></a>
 
         <ul id="menu">
             <li><a href="/catalog">Catalog</a></li>
