--- a/src/main/resources/templates/addOffer.html
+++ b/src/main/resources/templates/addOffer.html
@@ -22,12 +22,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/addDeck.css"/>
-    <link rel="stylesheet" href="../css/bootstrap/bootstrapNav.css"/>
+    <link rel="stylesheet" href="../static/css/addOffer.css"/>
+    <link rel="stylesheet" href="../static/css/bootstrap/bootstrapNav.css"/>
 
-    <script src="../js/sidebar.js" type="module"></script>
+    <script src="../static/js/sidebar.js" type="module"></script>
 
-    <link rel="icon" href="../images/ace-of-spades.png">
+    <link rel="icon" href="../static/images/ace-of-spades.png">
     <title>Victory</title>
 </head>
 <body>
@@ -36,7 +36,7 @@
 
     <nav id="nav" class="navbar navbar-expand">
 
-        <a href="/"><img src="../images/emblem.png"></a>
+        <a href="/"><img src="../static/images/emblem.png"></a>
 
         <ul id="menu">
             <li><a href="/catalog">Catalog</a></li>
@@ -80,7 +80,7 @@
                         <div class="row">
 
                             <div class="col">
-                                <label href="#" class="active" id="login-form-link">Create Deck</label>
+                                <label href="#" class="active" id="login-form-link">Create Offer</label>
                             </div>
 
                         </div>
@@ -90,7 +90,7 @@
                             <div class="col-lg-12">
 
 
-                                <form id="deck-form" method="post"
+                                <form id="offer-form" method="post"
                                       role="form" style="display: block;">
 
 
@@ -103,20 +103,12 @@
                                                class="form-control" placeholder="Distributor">
                                     </div>
                                     <div class="form-group">
+                                        <input type="number" step="0.01" name="password" id="Price" tabindex="2"
+                                               class="form-control" placeholder="Price">
+                                    </div>
+                                    <div class="form-group">
                                         <input type="password" name="password" id="creator" tabindex="2"
                                                class="form-control" placeholder="Creator">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="password" name="origin" id="origin" tabindex="2"
-                                               class="form-control" placeholder="Country of Origin">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="number" step="0.01" name="recommended-price" id="Price" tabindex="2"
-                                               class="form-control" placeholder="Recommended Price">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="text" step="0.01" name="description" id="description" tabindex="2"
-                                               class="form-control" placeholder="Description">
                                     </div>
                                     <div class="form-group">
                                         <select class="selectpicker" multiple data-live-search="true">
