--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -7,7 +7,7 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link rel="icon" href="../images/ace-of-spades.png">
+    <link rel="icon" href="../static/images/ace-of-spades.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -22,13 +22,13 @@
 
     <script src="https://kit.fontawesome.com/b18db754f0.js" crossorigin="anonymous"></script>
 
-    <script src="../js/sidebar.js" type="module"></script>
+    <script src="../static/js/sidebar.js" type="module"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/details.css"/>
+    <link rel="stylesheet" href="../static/css/details.css"/>
 
     <title>Victory</title>
 </head>
@@ -37,7 +37,7 @@
 <header>
     <nav id="nav" class="navbar navbar-expand">
 
-        <a href="/"><img src="../images/emblem.png"></a>
+        <a href="/"><img src="../static/images/emblem.png"></a>
 
         <ul id="menu">
             <li><a href="/catalog">Catalog</a></li>
