--- a/src/main/resources/templates/requests.html
+++ b/src/main/resources/templates/requests.html
@@ -18,16 +18,16 @@
             crossorigin="anonymous"></script>
 
 
-    <script src="../js/backToTop.js" type="module"></script>
-    <script src="../js/sidebar.js" type="module"></script>
+    <script src="../static/js/backToTop.js" type="module"></script>
+    <script src="../static/js/sidebar.js" type="module"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/requests.css"/>
+    <link rel="stylesheet" href="../static/css/requests.css"/>
 
-    <link rel="icon" href="../images/ace-of-spades.png">
+    <link rel="icon" href="../static/images/ace-of-spades.png">
     <title>Victory</title>
 </head>
 <body>
@@ -35,7 +35,7 @@
 <header>
     <nav id="nav" class="navbar navbar-expand">
 
-        <a href="/"><img src="../images/emblem.png"></a>
+        <a href="/"><img src="../static/images/emblem.png"></a>
 
         <ul id="menu">
             <li><a href="/catalog">Catalog</a></li>
