--- a/src/main/resources/static/css/utils/navigation.css
+++ b/src/main/resources/static/css/utils/navigation.css
@@ -93,6 +93,15 @@ li::before {
     margin-right: 10px;
 }
 
+
+#menu-toggle:hover{
+    cursor: pointer;
+    color: var(--light-gold);
+    font-weight: bolder;
+    border: 2px solid var(--light-gold);
+    border-radius: 5px;
+}
+
 /*Sidebar*/
 
 #wrapper {
