--- a/src/main/resources/static/css/utils/defaults.css
+++ b/src/main/resources/static/css/utils/defaults.css
@@ -42,10 +42,15 @@ main{
 a {
     color: inherit ;
     text-decoration: none !important;
+    border: none;
 }
 
 a:hover{
     color: inherit;
+}
+
+a:focus{
+    outline: 0;
 }
 
 input:focus{
