--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -1,66 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../../css/account.css"/>
+    <link rel="stylesheet" href="../../css/bootstrap/bootstrapNav.css"/>
 
-    <link rel="stylesheet" href="../static/css/account.css"/>
-    <link rel="stylesheet" href="../static/css/bootstrap/bootstrapNav.css"/>
+    <th:block th:repalce="~{/fragments/head.html}"/>
 
-    <script src="../static/js/sidebar.js" type="module"></script>
-
-    <link rel="icon" href="../static/images/ace-of-spades.png">
-    <title>Victory</title>
 </head>
 <body>
 
 <header>
 
     <nav id="nav" class="navbar navbar-expand">
-
-        <a href="/"><img src="../static/images/emblem.png"></a>
-
-        <ul id="menu">
-            <li><a href="/catalog">Catalog</a></li>
-            <li><a href="/search">Offers</a></li>
-            <span id="guest-nav">
-                    <li class="guest"><a href="/login">Login</a></li>
-                    <li class="guest"><a href="/register">Register</a></li>
-                </span>
-            <span id="user-nav">
-                    <li class="user"><a href="/create">Wishlist</a></li>
-                    <li id="logoutBtn" class="user"><a href="javascript:void(0)">Logout</a></li>
-            </span>
-        </ul>
-
-        <a href="#" id="menu-toggle" class="navbar-brand">&#9776</a>
+        <th:block th:replace="~{/fragments/navigation.html}"/>
     </nav>
 
 </header>
 
-<div id="wrapper">
-    <div id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <li><a href="#">Catalog</a></li>
-            <li><a href="#">Offers</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Wishlist</a></li>
-            <li><a href="#">Logout</a></li>
-        </ul>
-    </div>
-</div>
+<th:block th:replace="~{/fragments/sidebar.html}"/>
 
 <main>
 
@@ -73,11 +36,11 @@
 
 
                             <div class="col-xs-6">
-                                <a href="#" class="active" id="login-form-link">Login</a>
+                                <a href="/login"     id="login-form-link" th:classappend="${form}=='login' ? 'active' : ''" th:disabled="${form}!='login'">Login</a>
                             </div>
 
                             <div class="col-xs-6">
-                                <a href="#" id="register-form-link">Register</a>
+                                <a href="/register" id="register-form-link" th:classappend="${form}=='register' ? 'active' : ''" th:disabled="${form}!='register'">Register</a>
                             </div>
 
 
@@ -88,11 +51,11 @@
                             <div class="col-lg-12">
 
 
-                                <form id="login-form" action="https://phpoll.com/login/process" method="post"
-                                      role="form" style="display: block;">
+                                <form id="login-form" th:action="@{/login}" th:method="POST"
+                                      role="form" th:if="${form}=='login'">
                                     <div class="form-group">
                                         <input type="text" name="username" id="log_username" tabindex="1"
-                                               class="form-control" placeholder="Username" value="">
+                                               class="form-control" placeholder="Username">
                                     </div>
                                     <div class="form-group">
                                         <input type="password" name="password" id="log_password" tabindex="2"
@@ -122,23 +85,23 @@
                                     </div>
                                 </form>
 
-                                <form id="register-form" action="https://phpoll.com/register/process" method="post"
-                                      role="form" style="display: none;">
+                                <form id="register-form" th:action="@{/register}" th:method="POST"
+                                      role="form" th:if="${form}=='register'" th:object="${user}">
                                     <div class="form-group">
-                                        <input type="text" name="username" id="reg_username" tabindex="1"
-                                               class="form-control" placeholder="Username" value="">
+                                        <input type="text" tabindex="1"
+                                               class="form-control" placeholder="Username" th:field="*{username}">
                                     </div>
                                     <div class="form-group">
-                                        <input type="email" name="email" id="email" tabindex="1" class="form-control"
-                                               placeholder="Email Address" value="">
+                                        <input type="email" tabindex="1"
+                                               class="form-control" placeholder="Email Address" th:field="*{email}">
                                     </div>
                                     <div class="form-group">
                                         <input type="password" name="password" id="reg_password" tabindex="2"
-                                               class="form-control" placeholder="Password">
+                                               class="form-control" placeholder="Password" th:field="*{password}">
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" name="confirm-password" id="confirm-password"
-                                               tabindex="2" class="form-control" placeholder="Confirm Password">
+                                        <input type="password" tabindex="2"
+                                               class="form-control" placeholder="Confirm Password" th:field="*{rePass}">
                                     </div>
                                     <div class="form-group">
                                         <div class="row">
@@ -161,36 +124,9 @@
     </div>
 </main>
 
-<footer>&copy Victory 2022. All rights reserved.</footer>
+<th:block th:replace="~{/fragments/footer.html}"/>
 
-<script>
-    const loginBtn=document.querySelector("#login-form-link");
-    const loginForm=document.querySelector("#login-form");
-    const registerForm=document.querySelector("#register-form");
-    const registerBtn=document.querySelector("#register-form-link");
-
-    loginBtn.addEventListener("click", (ev)=>{
-        ev.preventDefault();
-
-        loginBtn.disabled=true;
-        loginBtn.classList.add("active")
-        loginForm.style.display="inline";
-        registerForm.style.display="none";
-        registerBtn.disabled=false;
-        registerBtn.classList.remove("active")
-    })
-
-    registerBtn.addEventListener("click", (ev)=>{
-        ev.preventDefault();
-
-        loginBtn.disabled=false;
-        loginBtn.classList.remove("active");
-        loginForm.style.display="none";
-        registerForm.style.display="inline";
-        registerBtn.disabled=true;
-        registerBtn.classList.add("active");
-    })
-</script>
+<script src="../../js/sidebar.js"></script>
 
 </body>
 </html>
