Basic login, register and logout

--- a/src/main/resources/static/css/account.css
+++ b/src/main/resources/static/css/account.css
@@ -135,4 +135,13 @@ main{
     }
 }
 
+.form-control{
+    margin-bottom: 0 !important;
+}
+
+.error{
+    text-align: left;
+    color: var(--royal-red);
+}
+
 
