--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -36,11 +36,11 @@
 
 
                             <div class="col-xs-6">
-                                <a href="/login"     id="login-form-link" th:classappend="${form}=='login' ? 'active' : ''" th:disabled="${form}!='login'">Login</a>
+                                <a href="/user/login"     id="login-form-link" th:classappend="${form}=='login' ? 'active' : ''" th:disabled="${form}!='login'">Login</a>
                             </div>
 
                             <div class="col-xs-6">
-                                <a href="/register" id="register-form-link" th:classappend="${form}=='register' ? 'active' : ''" th:disabled="${form}!='register'">Register</a>
+                                <a href="/user/register" id="register-form-link" th:classappend="${form}=='register' ? 'active' : ''" th:disabled="${form}!='register'">Register</a>
                             </div>
 
 
@@ -51,15 +51,17 @@
                             <div class="col-lg-12">
 
 
-                                <form id="login-form" th:action="@{/login}" th:method="POST"
-                                      role="form" th:if="${form}=='login'">
+                                <form id="login-form" th:action="@{/user/login}" th:method="POST"
+                                      role="form" th:if="${form}=='login'" th:object="${user}">
                                     <div class="form-group">
                                         <input type="text" name="username" id="log_username" tabindex="1"
-                                               class="form-control" placeholder="Username">
+                                               class="form-control" placeholder="Username"
+                                                th:field="*{username}" th:errorclass="invalid-field">
                                     </div>
                                     <div class="form-group">
                                         <input type="password" name="password" id="log_password" tabindex="2"
-                                               class="form-control" placeholder="Password">
+                                               class="form-control" placeholder="Password"
+                                                th:field="*{password}" th:errorclass="invalid-field">
                                     </div>
                                     <div class="form-group text-center">
                                         <input type="checkbox" tabindex="3" class="" name="remember" id="remember">
@@ -85,23 +87,43 @@
                                     </div>
                                 </form>
 
-                                <form id="register-form" th:action="@{/register}" th:method="POST"
+                                <form id="register-form" th:action="@{/user/register}" th:method="POST"
                                       role="form" th:if="${form}=='register'" th:object="${user}">
                                     <div class="form-group">
                                         <input type="text" tabindex="1"
-                                               class="form-control" placeholder="Username" th:field="*{username}">
+                                               class="form-control" placeholder="Username"
+                                               th:field="*{username}" th:errorclass="invalid-field">
+                                        <div class="error">
+                                            <span th:each="err : ${#fields.errors('username')}" th:text="${err}">
+                                            </span>
+                                        </div>
                                     </div>
                                     <div class="form-group">
                                         <input type="email" tabindex="1"
-                                               class="form-control" placeholder="Email Address" th:field="*{email}">
+                                               class="form-control" placeholder="Email Address"
+                                               th:field="*{email}" th:errorclass="invalid-field">
+                                        <div class="error">
+                                            <span th:each="err : ${#fields.errors('email')}" th:text="${err}">
+                                            </span>
+                                        </div>
                                     </div>
                                     <div class="form-group">
                                         <input type="password" name="password" id="reg_password" tabindex="2"
-                                               class="form-control" placeholder="Password" th:field="*{password}">
+                                               class="form-control" placeholder="Password"
+                                               th:field="*{password}" th:errorclass="invalid-field">
+                                        <div class="error">
+                                            <span th:each="err : ${#fields.errors('password')}" th:text="${err}">
+                                            </span>
+                                        </div>
                                     </div>
                                     <div class="form-group">
                                         <input type="password" tabindex="2"
-                                               class="form-control" placeholder="Confirm Password" th:field="*{rePass}">
+                                               class="form-control" placeholder="Confirm Password"
+                                               th:field="*{rePass}" th:errorclass="invalid-field">
+                                        <div class="error">
+                                            <span th:each="err : ${#fields.errors('rePass')}" th:text="${err}">
+                                            </span>
+                                        </div>
                                     </div>
                                     <div class="form-group">
                                         <div class="row">
