--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -2,15 +2,15 @@
     <a href="/"><img src="../../images/emblem.png" alt="Victory"></a>
 
     <ul id="menu">
-        <li><a href="/catalog">Catalog</a></li>
-        <li><a href="/search">Offers</a></li>
+        <li><a th:href="@{/catalog}">Catalog</a></li>
+        <li><a th:href="@{/search}">Offers</a></li>
         <span id="guest-nav">
-                    <li class="guest"><a href="/login">Login</a></li>
-                    <li class="guest"><a href="/register">Register</a></li>
+                    <li class="guest"><a th:href="@{/user/login}">Login</a></li>
+                    <li class="guest"><a th:href="@{/user/register}">Register</a></li>
                 </span>
         <span id="user-nav">
-                    <li class="user"><a href="/create">Wishlist</a></li>
-                    <li id="logoutBtn" class="user"><a href="javascript:void(0)">Logout</a></li>
+                    <li class="user"><a th:href="@{/create}">Wishlist</a></li>
+                    <li id="logoutBtn" class="user"><a th:href="@{/user/logout}">Logout</a></li>
             </span>
     </ul>
 
