--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
