--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -57,11 +57,21 @@
                                         <input type="text" name="username" id="log_username" tabindex="1"
                                                class="form-control" placeholder="Username"
                                                 th:field="*{username}" th:errorclass="invalid-field">
+                                        <div class="error">
+                                            <span th:text="${#strings.listJoin(#fields.errors('username'), '; ')}">
+
+                                            </span>
+                                        </div>
                                     </div>
                                     <div class="form-group">
                                         <input type="password" name="password" id="log_password" tabindex="2"
                                                class="form-control" placeholder="Password"
                                                 th:field="*{password}" th:errorclass="invalid-field">
+                                        <div class="error">
+                                            <span th:text="${#strings.listJoin(#fields.errors('password'), '; ')}">
+
+                                            </span>
+                                        </div>
                                     </div>
                                     <div class="form-group text-center">
                                         <input type="checkbox" tabindex="3" class="" name="remember" id="remember">
@@ -95,7 +105,7 @@
                                                th:field="*{username}" th:errorclass="invalid-field">
                                         <div class="error">
                                             <span th:text="${#strings.listJoin(#fields.errors('username'), '; ')}">
-                                                The username should be between 4 and 20 characters
+
                                             </span>
                                         </div>
                                     </div>
@@ -115,7 +125,7 @@
                                                th:field="*{password}" th:errorclass="invalid-field">
                                         <div class="error">
                                             <span th:text="${#strings.listJoin(#fields.errors('password'), '; ')}">
-                                                Password must be between 6 and 30 characters
+
                                             </span>
                                         </div>
                                     </div>
