--- a/src/main/resources/templates/addDeck.html
+++ b/src/main/resources/templates/addDeck.html
@@ -132,7 +132,7 @@
                                         <label for="formFile" class="custom-file-upload">
                                             Click to upload images
                                         </label>
-                                        <input class="form-control" type="file" id="formFile" multiple>
+                                        <input required class="form-control" type="file" id="formFile" multiple>
                                     </div>
 
                                     <table class="form-group" id="image-container">
