--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -109,12 +109,14 @@
                                         <a type="button"
                                            class="btn btn-sm btn-outline-secondary cardBtn detailsBtn stretched-link"
                                            th:href="@{/catalog/deck/{deckId} (deckId=*{id})}">View</a>
-                                        <a type="button"
-                                           class="btn btn-sm btn-outline-secondary cardBtn editBtn"
-                                           th:href="@{/catalog/deck/edit/{deckId} (deckId=*{id})}">Edit</a>
-                                        <a type="button"
-                                           class="btn btn-sm btn-outline-secondary cardBtn deleteBtn"
-                                           th:href="@{/catalog/deck/delete/{deckId} (deckId=*{id})}">Delete</a>
+                                        <span sec:authorize="hasRole('ADMIN')">
+                                            <a type="button"
+                                               class="btn btn-sm btn-outline-secondary cardBtn editBtn"
+                                               th:href="@{/catalog/deck/edit/{deckId} (deckId=*{id})}">Edit</a>
+                                            <a type="button"
+                                               class="btn btn-sm btn-outline-secondary cardBtn deleteBtn"
+                                               th:href="@{/catalog/deck/delete/{deckId} (deckId=*{id})}">Delete</a>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
