--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -40,7 +40,7 @@
                     <div class="card" style="border-radius: 15px;">
                         <div class="card-body p-5">
 
-                            <a href="/catalog" class="store-link">
+                            <a th:href="@{/decks/all}" class="store-link">
                                 Start
                             </a>
 
